# Radioscript

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
radioscript/: __init__.py  builder.py  checker.py  cli.py  parser.py  prompter.py  recorder.py
radioscript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
radioscript/templates/: script.md
